Fixes nav list highlighting and collapse issue
- Replaces check of current URL against current link URL with rsg--isSelected partial class selector in activeNav docs component
- Adds rsg--isSelected partial selector to docs.styles for active nav items
- Adds settimeout to activeNav and filterSearch docs component update handlers in docs.helper.js so updates occur on next tick

--- a/docs/styles/docs.styles.scss
+++ b/docs/styles/docs.styles.scss
@@ -304,7 +304,8 @@ div[class^="rsg--sidebar"] {
     }
   }
 
-  // Sidebar active link
+  // Sidebar active link and ancestors
+  li[class*="rsg--isSelected"],
   .vueds-active {
     & > ul[class^="rsg--list"] {
       display: block;
